syntax = "proto3";
package kubeappsapis.plugins.fluxv2.packages.v1alpha1;
option go_package = "github.com/kubeapps/kubeapps/cmd/kubeapps-apis/gen/plugins/fluxv2/packages/v1alpha1";

import "google/api/annotations.proto";
import "kubeappsapis/core/packages/v1alpha1/packages.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service FluxV2PackagesService {
  // GetAvailablePackageSummaries returns the available packages managed by the 'fluxv2' plugin
  rpc GetAvailablePackageSummaries(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/availablepackagesummaries"
    };
  };
  // GetAvailablePackageDetail returns the package metadata managed by the 'fluxv2' plugin
  rpc GetAvailablePackageDetail(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageDetailRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageDetailResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/availablepackagedetails"
    };
  };
  // GetPackageRepositories returns the repositories managed by the 'fluxv2' plugin
  rpc GetPackageRepositories(kubeappsapis.core.packages.v1alpha1.GetPackageRepositoriesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetPackageRepositoriesResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/packagerepositories"
    };
  };
  
}
